# manga-api

./: .gitignore  example.secrets.toml  pyproject.toml  settings.toml
app/: config.py  main.py  models.py
app/internal/: index_worker.py
app/internal/fetchers/: e_hentai.py  hitomi.py
app/routers/: index.py  manga.py  novel.py
